DFG JIT does not speculative integers as aggressively as it should https://bugs.webkit.org/show_bug.cgi?id=65949

Reviewed by Gavin Barraclough.

Added a tree walk to propagate integer predictions through arithmetic
expressions.

This is a 71% speed-up on Kraken's imaging-gaussian-blur, which
translates to a 19% speed-up on Kraken overall.  It's neutral on
other benchmarks.

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::predictInt32):


Canonical link: https://commits.webkit.org/81815@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92736 268f45cc-cd09-0410-ab3c-d52691b4dbfc